Colab을 통해 생성됨

--- a/04_StatQuest_Tutorial_Word_Embedding.ipynb
+++ b/04_StatQuest_Tutorial_Word_Embedding.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJgix5WHbBu2MfOcpyOEpl",
+      "authorship_tag": "ABX9TyP0flV8WLQHZWL6VCjrHDXm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ZidiZw26FX-",
-        "outputId": "2949945b-93b2-4d9b-a980-cff5d32c360a"
+        "outputId": "df0bed65-d4b7-45d0-d89e-c3da1a94e7b0"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([3., 1.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([3., 1.])\n"
+          ]
         }
       ],
       "source": [
@@ -53,7 +50,8 @@
         "import pandas as pd\n",
         "import torch\n",
         "\n",
-        "torch.tensor([3.0, 1.0])"
+        "test = torch.tensor([3.0, 1.0])\n",
+        "print(test)"
       ]
     },
     {
