Colab을 통해 생성됨

--- a/05_StatQuest_Tutorial_GPT.ipynb
+++ b/05_StatQuest_Tutorial_GPT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdLkYF6ylNvaMboo08R3q9",
+      "authorship_tag": "ABX9TyMTDRANCdf4uCNPlKsnSwV6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 56,
       "metadata": {
         "id": "130XurpM-8nA"
       },
@@ -65,23 +65,10 @@
         "id_to_token = dict(map(reversed, token_to_id.items()))"
       ],
       "metadata": {
-        "id": "-cf_I76-AyF4",
-        "outputId": "37242b88-6022-4d85-d1c8-e8229f6e1f9b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "-cf_I76-AyF4"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'what': 0, 'is': 1, 'statquest': 2, 'awesome': 3, '<EOS>': 4}\n",
-            "{0: 'what', 1: 'is', 2: 'statquest', 3: 'awesome', 4: '<EOS>'}\n"
-          ]
-        }
-      ]
+      "execution_count": 57,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -107,7 +94,42 @@
       "metadata": {
         "id": "6OG3vIVOCTvy"
       },
-      "execution_count": null,
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class PositionEncoding(nn.Module):\n",
+        "  def __init__(self, d_model = 2, max_len = 6):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    pe = torch.zeros(max_len, d_model)\n",
+        "\n",
+        "    print(pe)\n",
+        "\n",
+        "    pos = torch.arange(start = 0, end = max_len, step=1).float().unsqueeze(1)\n",
+        "    idx = torch.arange(start = 0, end = d_model, step=2).float()\n",
+        "\n",
+        "    print(pos)\n",
+        "    print(idx)\n",
+        "\n",
+        "    div = 1/torch.tensor(10000.0)**(idx / d_model)\n",
+        "\n",
+        "    pe[:, 0::2] = torch.sin(pos * div)\n",
+        "    pe[:, 1::2] = torch.cos(pos * div)\n",
+        "    print(pe)\n",
+        "    print(pe[:2, :])\n",
+        "\n",
+        "    self.register_buffer('pe', pe)\n",
+        "\n",
+        "  def forward(self, word_embeddings):\n",
+        "    return word_embeddings + self.pe[:word_embeddings.size[0], :]"
+      ],
+      "metadata": {
+        "id": "uQXXciJjJb5l"
+      },
+      "execution_count": 59,
       "outputs": []
     }
   ]
